--- a/hsds_load/Dockerfile
+++ b/hsds_load/Dockerfile
@@ -28,3 +28,6 @@ RUN cd /tmp                                                                     
     cd h5pyd                                                                       ; \
     python setup.py install                                                        ; \
     cd -
+
+RUN mkdir /opt/nasa
+COPY index_file.py /opt/nasa
